<resources>
    <string name="app_name">İytem</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="transportation">Ulaşım</string>
    <string name="transportation_des">İYTE\'ye ulaşım saatleri</string>
    <string name="food_des">Yemekhane menüsü ve Rezervasyon</string>
    <string name="shortcut_des">En gerekli siteler</string>
    <string name="contacts_des">Okul personeli iletişim bilgileri</string>
    <string name="food">Yemekhane</string>
    <string name="shortcuts">Kolay Erişim</string>
    <string name="contacts">Rehber</string>
    <string name="obs">Öğrenci Bilgi Sistemi</string>
    <string name="cms">Course Management System (CMS)</string>
    <string name="library">Kütüphane</string>
    <string name="iztech">İYTE Ana Sayfa</string>
    <string name="ydyo">Yabancı Diller Yüksekokulu</string>
    <string name="webmail">İYTE Mail</string>
    <string name="menuTitle">Günün Menüsü</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="today">Bugün</string>
    <string name="week_day">Hafta içi</string>
    <string name="saturday">C.tesi</string>
    <string name="sunday">Pazar</string>
    <string name="search">Ara</string>
    <string name="change_direction">yön değiştir</string>
    <string name="monthly_menu">Aylık Menü</string>
    <string name="reserve_food">Rezervasyon Yaptır</string>
    <string name="email">Email</string>
    <string name="phone">Telefon</string>
    <string name="title">Ünvan</string>
    <string name="department">Bölüm</string>
    <string name="no_menu">Yemekhane Kapalı</string>
    <string name="contact">Kişi</string>
    <string name="feedback">Geri Bildirim</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="iytem">İytem</string>
    <string name="dummy" translatable="false">dummy</string>
    <string name="connection_warn">İnternetinizin açık olduğundan emin olun</string>
    <string name="light_theme">Açık Tema</string>
    <string name="dark_theme">Koyu Tema</string>
    <string name="share">Paylaş</string>
    <string name="welcome">Hoşgeldiniz</string>
    <string name="change_theme">Tema Değiştir</string>
    <string name="settings">Ayarlar</string>
    <string name="communication">İletişim</string>
    <string name="emergency">Kampüs Acil Durum</string>
    <string name="rectorate">Rektörlük</string>
    <string name="student_affairs">Öğrenci İşleri</string>
    <string name="location">Konum</string>
    <string name="map">Harita</string>
    <string name="launcher_name">İytem</string>
    <string name="bus">Otobüs</string>
    <string name="departure_hours">Kalkış Saatleri</string>
    <string name="no_service">Sefer Yok</string>
    <string name="not_available">Mevcut değil</string>
    <string name="academic_calendar">Akademik Takvim</string>
    <string name="gk_dep">Genel Kültür Dersleri Bölümü</string>
    <string name="download_iytem">İYTEM ile sağlandı</string>
    <string name="share_contact">Kişiyi Paylaş</string>
    <string name="monthly_menu_tut">Menüye basılı tutarak onu paylaşabilirsin</string>
    <string name="share_menu">Menüyü Paylaş</string>
    <string name="reach_us">Bize Ulaş</string>


</resources>
