<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".BusActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Widget.AppCompat.Light.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:theme="@style/ToolbarTheme"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            app:tabTextAppearance="@style/CustomTabText"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_day" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />

        </com.google.android.material.tabs.TabLayout>


        <RelativeLayout
            android:id="@+id/direction"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:theme="@style/ToolbarTheme"
            android:background="@color/cardBg"
            android:elevation="8dp">

            <TextView
                android:id="@+id/directionTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:background="@color/cardBg"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/swap"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:scaleType="fitCenter"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:tint="?attr/colorControlNormal"
                android:background="@color/cardBg"
                app:srcCompat="@drawable/ic_swap_horiz"
                android:contentDescription="@string/change_direction" />

        </RelativeLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>