<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/menuLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gridLayout2">

        <TextView
            android:id="@+id/menuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/menuTitle"
            android:textSize="28sp"
            android:fontFamily="@font/baloo"/>

        <ListView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menuTitle"
            android:layout_margin="18dp"

            android:listSelector="@android:color/transparent">


        </ListView>
    </RelativeLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:alignmentMode="alignBounds"
        app:columnCount="2"
        app:columnOrderPreserved="false"
        app:rowCount="1">


        <androidx.cardview.widget.CardView
            android:id="@+id/monthlyMenu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/cardCornerRad"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/cardBg"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    android:src="@drawable/ic_calendar_today"
                    android:tint="?attr/colorControlNormal"
                    android:contentDescription="@string/dummy" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/monthly_menu"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addMoney"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/cardCornerRad"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/cardBg"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_credit_card"
                    android:tint="?attr/colorControlNormal"
                    android:contentDescription="@string/dummy"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/add_money"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Para Yükle" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>





</androidx.constraintlayout.widget.ConstraintLayout>